# OSPS

./: CMakeLists.txt  README.md  compile.sh  install.sh
french/: fr_phonetrack.php  fr_phonetrack.py  french_provider.csv
resources/france/: france_ranges.csv
src/: main.cpp
src/phonescan/: CountryCode.cpp  CountryCode.hpp  CountryPhoneScan.hpp  GlobalPhoneScan.cpp  GlobalPhoneScan.hpp  PhoneData.cpp  PhoneData.hpp
src/phonescan/france/: FrancePhoneScan.cpp  FrancePhoneScan.hpp
src/utils/: StringOperation.cpp  StringOperation.hpp
